fix padding for aboutpage to not overflow

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -32,7 +32,9 @@ section {
 @include tablet {
   section {
     width: 100%;
-    padding-inline: 2rem;
+    .about-container {
+      padding-inline: 2rem;
+    }
   }
 }
 
